<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".feature.calltoservice.presentation.MainActivity">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_call_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_go_to_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_list_activity"
        app:layout_constraintEnd_toEndOf="@+id/btn_call_service"
        app:layout_constraintStart_toStartOf="@+id/btn_call_service"
        app:layout_constraintTop_toBottomOf="@+id/btn_call_service" />

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        app:layout_constraintEnd_toEndOf="@+id/btn_go_to_list"
        app:layout_constraintStart_toStartOf="@+id/btn_go_to_list"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_list"
        tools:text="@string/response" />

    <TextView
        android:id="@+id/tv_response_reversed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        app:layout_constraintEnd_toEndOf="@+id/tv_response"
        app:layout_constraintStart_toStartOf="@+id/tv_response"
        app:layout_constraintTop_toBottomOf="@+id/tv_response"
        tools:text="@string/response" />

</androidx.constraintlayout.widget.ConstraintLayout>